--- a/docs/常见问题/常量加密.md
+++ b/docs/常见问题/常量加密.md
@@ -20,3 +20,6 @@ sort: 16
 4. 会有常量加密不充分的情况么？
 > 会有这种情况，比如在 ObjC/cpp/c 里面在宏定义中的字符串常量，就不会被加密，或者有 static NSString* a = "MyStr"; 这种形式的定义，也不会被加密，这种情况下，要么修改源码，要么去掉源码的(I)标识
 > 
+
+5. Swift NSString 类型引起错误，怎么解决？
+> 要么去掉引起编译错误的文件上的（I）标识，要么在文件中加入一段文本`/*@ENABLE_NSSTRING*/`
