--- a/docs/常见问题/混淆资源.md
+++ b/docs/常见问题/混淆资源.md
@@ -7,3 +7,8 @@ sort: 9
 1.提示找不到资源文件?
 > 请先点击【重置】按钮，然后打开Xcode项目，检查一下资源是否存在，因为在混淆过程中，如果Xcode打开了当前项目，就会导致工程文件被Xcode保存，导致混淆程序的存档恢复功能无效。
 > 
+
+
+1.采用了加密混淆png后，运行时找不到png资源文件?
+> 这是因为png图片被加密后根本，xcode不会拷贝到最终APP目录下到导致的，请在【混淆设置】/【资源脚本】找到 `png 脚本定义` 那个配置的分栏，在 `copy-resource-script` 里面填上 `${script-dir}/copy_resource.py` 
+>
