--- a/docs/高级技巧/速度优化.md
+++ b/docs/高级技巧/速度优化.md
@@ -1,5 +1,5 @@
 ---
-sort: 2
+sort: 6
 ---
 
 # 加快混淆速度
@@ -11,7 +11,7 @@ sort: 2
 - 去除没什么用的CPU架构
 
 ## 启用编译加速功能
-编译加速功能目前只是针对c/c++/objc的编译加速，要想启用该功能，需要在点击【开始混淆】按钮后，打开【编译加速】功能
+编译加速功能目前只是针对c/c++/objc的编译加速，要想启用该功能，需要在点击【开始混淆】按钮后，打开【编译加速】功能（这个功能会在编译时引起找不到某些符号问题，需要在主应用中，手动添加相关的Framework)
 
 ## 开启高性能模式
 想要打开该功能，需要在点击【开始混淆】按钮后，打开【编译加速】功能
