补充几个截图

--- a/docs/高级技巧/自定义资源混淆.md
+++ b/docs/高级技巧/自定义资源混淆.md
@@ -3,7 +3,7 @@ sort: 2
 ---
 
 # 如何混淆一个自定的格式的资源?
-有时候想混淆一个自定义个文件格式，如果操作不当就会出现问题，如果这个文件的读取操作在一个外部SDK里面，并且是c/c++方法读取的，就会出现运行时错误，就需要添加外部SDK存档-混淆来修复它(外部SDK存档混淆请查考其他文档)
+有时候想混淆一个自定义个文件格式，如果操作不当就会出现问题，如果这个文件的读取操作在一个外部SDK里面，并且是`c/c++`方法读取的，就会出现运行时错误，就需要添加外部SDK存档-混淆来修复它 [外部SDK混淆](https://outtable.github.io/confuse-9live/%E9%AB%98%E7%BA%A7%E6%8A%80%E5%B7%A7/%E5%A4%96%E9%83%A8SDK%E6%B7%B7%E6%B7%86.html)
 
 ## 添加一个自定义的资源脚本
 1. 打开工程混淆设置，切换到【资源脚本】
